# fastapi-template

./: .dockerignore  .gitignore  README.md  docker-compose.yml  pyproject.toml  setup.cfg
app/: db.py  main.py
app/api/: crud.py  summaries.py
compose/db/: Dockerfile
compose/fastapi/: Dockerfile
project/: .dockerignore  Dockerfile  Dockerfile.prod  requirements.txt  setup.cfg
project/app/: config.py  db.py  main.py
project/app/api/: crud.py  ping.py  summaries.py
project/app/models/: tortoise.py
project/tests/: conftest.py  test_ping.py
