[tool.poetry]
name = "fastapi-template"
version = "0.1.0"
description = ""
authors = ["Max-4ever <no@mail.com>"]

packages = [
    { include = "app" }
]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "0.70.1"
uvicorn = "0.16.0"
gunicorn = "20.1.0"
asyncpg = "0.25.0"
tortoise-orm = "0.17.8"
aerich = "0.6.1"
requests = "2.26.0"

[tool.poetry.dev-dependencies]
pytest = "6.2.5"
pytest-cov = "3.0.0"
black = "22.1.0"
isort = "5.10.1"
pre-commit = "2.17.0"
wemake-python-styleguide = "0.16.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.aerich]
tortoise_orm = "app.db.TORTOISE_ORM"
location = ".app/migrations"
src_folder = "./app/."
